# Selenium-Requests

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_seleniumrequests.py
seleniumrequests/: __init__.py  request.py
tests/: test_chrome.py  test_firefox.py  test_phantomjs.py  test_seleniumrequests.py
