[tool.poetry]
name = "selenium-requests"
version = "1.4.0"
description = "Extends Selenium WebDriver classes to include the request function from the Requests library, while doing all the needed cookie and request headers handling."
readme = "README.md"
authors = ["Chris Braun <cryzed@googlemail.com>"]
packages = [{ include = "seleniumrequests" }]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.26.0"
tldextract = "^3.1.1"
selenium = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^22.1.0"
pylint = "^2.12.2"
types-requests = "^2.25.6"
types-selenium = "^3.141.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
